
[package]
name = "ring_arith"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
criterion = "0.6.0"
memoize = "0.5.1"
rand = "0.9.1" 

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3         # full optimizations (default)
debug = false         # no debug symbols
overflow-checks = false

[[bench]]
name = "bench"
harness = false
